# shaarpy

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yaml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-conf-server.txt  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-app.yml
compose/django/: Dockerfile
docs/: doker.md  server_install.md
shaarpy/: __init__.py  admin.py  apps.py  asgi.py  env.sample  forms.py  models.py  settings.py  sitemaps.py  tools.py  urls.py  views.py  wsgi.py
shaarpy/fixtures/: my_shaarpy_data.json  my_shaarpy_dump.json
shaarpy/management/commands/: export_md.py  import.py  import_pelican.py  import_pelican_folder.py  shaarli_load.py
shaarpy/migrations/: 0001_initial.py  0002_alter_links_options_links_sticky.py  0003_links_url_hashed_alter_links_id.py  0004_alter_links_url_hashed.py  0005_alter_links_date_created.py  0006_alter_links_date_created.py  0007_alter_links_tags.py  0008_alter_links_options.py
shaarpy/static/: 502.html
shaarpy/static/shaarpy/css/: base.css
shaarpy/templates/: base.html  edit_me.html  me.html  shaarpy_markdown.md
shaarpy/templates/registration/: login.html
shaarpy/templates/shaarpy/: 403.html  404.html  500.html  daily_list.html  links_confirm_delete.html  links_detail.html  links_form.html  links_list.html  search.html  shaarpy_markdown.md  tags_list.html
shaarpy/templatetags/: shaarpy_extras.py
shaarpy/tests/: bookmarks.html  brunus-wgamesolv-framagit.md  hacker-news-avec-django.md  test_commands.py  test_common.py  test_conf.py  test_feed.py  test_me_views.py  test_models.py  test_sitemap.py  test_templatetags.py  test_tools.py  test_version.py  test_views.py  test_views_daily.py  test_views_feeds.py  test_views_links.py  test_views_links_create.py  test_views_me.py  test_views_pub_priv_links.py  test_views_tags.py  vue-js-vuejs.md
shaarpy/views/: __init__.py  daily.py  feeds.py  links.py  me.py  pub_priv_links.py  tags.py
