[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#requires = ["setuptools>=69"]
#build-backend = "setuptools.build_meta"

[project]
name = "shaarpy"
version = "1.2.0"
description = "ShaarPy: Share your thoughts, links, ideas, notes. self-hosting bookmarks and micro blogging. If you ever wanted Shaarli in python, that's it ^_*"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "폭스마스크", email = "foxmask+git@pm.me" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    #"License :: WTFPL",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Database",
]

dependencies = [
    "Django < 5.3",
    "django-environ == 0.12.0",
    "django-simple-search == 1.0.2",
    "Markdown == 3.7",
    "Pygments == 2.19.0",
    "rich == 14.0.0",
    "pytz == 2025.2",
    "python-slugify == 8.0.4",
    "Jinja2 == 3.1.6",
]

[project.urls]
Homepage = "https://github.com/foxmask/shaarpy/"
Documentation = "https://github.com/foxmask/shaarpy/blob/main/README.md"
Source = "https://github.com/foxmask/shaarpy/"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "DJ",  # flake8 django
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[project.optional-dependencies]
test = [
    "build",
    "wheel",
    "coverage",
    "pytest-django",
    "pipdeptree",
    "twine",
    "django-debug-toolbar",
    "bandit",
    "pip-audit",
]
lint = ["ruff == 0.7.3"]

[tool.setuptools.packages.find]
include = ["shaarpy*"]
namespaces = false

[tool.setuptools]
include-package-data = false

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
#strict_optional = true
python_version = 3.11
disallow_untyped_defs = true
#show_error_codes = true
#no_implicit_optional = true
#warn_return_any = true
#warn_unused_ignores = true
exclude = ["scripts", "docs", "test"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "shaarpy.settings"

[tool.bandit]
exclude_dirs = ["tests"]
