[metadata]
name=shaarpy
description="ShaarPy: Share your thoughts, links, ideas, notes. If you ever wanted Shaarli in python, that's it ^_*"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://git.afpy.org/foxmask/shaarpy/
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=python django shaarli
version=attr: shaarpy.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

project_urls =
    Documentation = https://git.afpy.org/foxmask/shaarpy/wiki
    Source = https://git.afpy.org/foxmask/shaarpy/
    Tracker = https://git.afpy.org/foxmask/shaarpy/issues

[options]
python_requires=>=3.10
packages=find:
include_package_data=true
zip_safe=false


install_requires=
    Django==5
    django-environ==0.11.2
    django-simple-search==1.0.2
    jinja2==3.1.2
    newspaper3k==0.2.8
    python-slugify==8.0.1
    pypandoc==1.12
    rich==13.7.0

[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=119
exclude=.tox,build,.git
ignore = E402, F401
