[metadata]
name=shaarpy
description="ShaarPy: Share your thoughts, links, ideas, notes. If you ever wanted Shaarli in python, that's it ^_*"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/shaarpy/
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=python django shaarli
version=attr: shaarpy.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: WTFPL
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

project_urls =
    Documentation = https://github.com/foxmask/shaarpy/wiki
    Source = https://github.com/foxmask/shaarpy/
    Tracker = https://github.com/foxmask/shaarpy/issues

[options]
python_requires=>=3.10
packages=find:
include_package_data=true
zip_safe=false


install_requires=
    Django==5.1.2
    django-environ==0.11.2
    django-simple-search==1.0.2
    newspaper3k==0.2.8
    pypandoc==1.14
    rich==13.9.4
    pytz==2024.2
    python-slugify==8.0.4
    Jinja2==3.1.4
    lxml[html_clean]==5.3.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=119
exclude=.tox,build,.git
ignore = E402, F401

[mypy]
plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "shaarpy.settings"
